# PACDeluxe

./: .gitignore  .tauri-private.key.pub  CHANGELOG.md  CHUNGUS_MODE_IMPLEMENTATION.md  CLAUDE.md  LICENSE  PORTRAIT_FIX_INSTRUCTIONS.md  PORTRAIT_RENDERING_FIX.md  README.md  STABILITY_ANALYSIS.md  TRANSPARENCY.md  biome.json  install.bat  install.ps1  package-lock.json  package.json  run-dev.bat  run-dev.ps1  tmpclaude-d13f-cwd
.claude/: ralph-loop.local.md  settings.json
.github/workflows/: release.yml
config/: firebase-client.env.example
docs/: ADR-0001-local-build-architecture.md  CHATGPT_AGENT_BRIEFING.md  ETHICS_AND_COMPLIANCE.md  PATCH_MANIFEST.md  PERFORMANCE_TUNING.md  README.md  RELEASE_CHECKLIST.md  UPSTREAM_ANALYSIS.md  V1.1-IMPLEMENTATION-PLAN.md  V1.2-INSTRUCTIONS.md  V1.3-IMPLEMENTATION-PLAN.md  V2_0_STABILIZATION_AUDIT_AND_PLAN.md
docs/expansionproj/: ARTIFACT_SCHEMA.md  AUTHENTICATION_MODEL.md  BOOTSTRAP_INSTRUCTIONS.md  CI_STRATEGY.md  CLAUDE_INTERFACE.md  DIFF_ENGINE_CONTRACT.md  ETHICAL_COMPLIANCE.md  FLOW_RECORDING_SPEC.md  IMPLEMENTATION_PLAN.md  PLAYWRIGHT_EXECUTION_PLAN.md  PROJECT_EXECUTION_CONTRACT.md  SYSTEM_ARCHITECTURE.md
release/: PACDeluxe_1.0.0_x64_en-US.msi
scripts/: build-frontend.js  build-manifest.js  build-release.js  dev-server.js  generate-icons.js  generate-tilemaps.cjs  proxy-manifest.js  release-artifacts.js  setup.js  sign-release-artifacts.js  sync-upstream.js  upstream-client-assets.js  validate-determinism.js  verify-build-manifest.js  verify-release-artifacts.js  verify-updater-endpoint.js  write-updater-manifest.js
src/: index.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  localhost_server.rs  main.rs  performance.rs
src-tauri/src/runtime/: auth-popup-bridge.js  overlay.js
src/bridge/: tauri-bridge.js
src/performance/: asset-cache.js  asset-prefetcher.js  frame-monitor.js  frame-pacer.js  input-optimizer.js  network-monitor.js  profiling-overlay.js  render-optimizer.js
tests/: ethical-safeguards.test.js
